[package]
name = "chat"
version = "0.1.0"
authors = ["Polly Nielsen Boutet-Livoff <pollyboutet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.21.0"
bcrypt = "0.6"
failure = "0.1.6"
text_io = "0.1.8"